Update package.json s

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
+  "name": "mcet_report",
+  "version": "1.0.0",
+  "main": "server.js",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
+  },
+  "scripts": {
+    "start": "node backend/server.js"
   }
 }
